samples/errors/statments-after-return.fls
func write(x)
    0

x: 10
if x = 10
    return
    write(x)
write(x = 10)
